[package]
name = "rust-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.5.0"
cw2 = "1.1.2"
thiserror = "1.0.56"
schemars = "0.8.16"
serde = "1.0.195"
cw-storage-plus = "1.2.0"
cw-multi-test = "0.20.0"